fix(header): service image opacity on mobile devices

--- a/packages/webcomponents/header/src/components/service/style.scss
+++ b/packages/webcomponents/header/src/components/service/style.scss
@@ -197,5 +197,9 @@
     > .icon {
       color: var(--#{$prefix}service);
     }
+
+    > img.icon {
+      opacity: 1;
+    }
   }
 }
